--- a/public/Css/signin.css
+++ b/public/Css/signin.css
@@ -16,7 +16,7 @@ body::before {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-image: url("./images/pexels-karolina-grabowska-5908816.jpg");
+  background-image: url("../images/pexels-karolina-grabowska-5908816.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -26,7 +26,7 @@ body::before {
 .form-container {
   max-width: 550px;
   width: 90%;
-  height: 520px;
+  height: 500px;
   background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 10px;
@@ -159,3 +159,4 @@ body::before {
   font-size: 18px;
   margin-bottom: 1px;
 }
+
